docs: 检索链路注释完善、评测清单与 TODO 更新